[package]
name = "merkletree"
version = "0.22.1"
authors = [
  "nemo <nemo@protocol.ai>",
  "schomatis",
  "Ivan Prisyazhnyy <john.koepi@gmail.com>",
]

readme = "README.md"
description = "Light merkle tree implementation with SPV support and dependency agnostic."
license = "BSD-3-Clause"
homepage = "https://github.com/filecoin-project/merkle_light"
repository = "https://github.com/filecoin-project/merkle_light"
documentation = "https://docs.rs/merkletree"
keywords = ["merkle", "merkle-tree"]
categories = ["data-structures", "cryptography"]
edition = "2018"

[package.metadata.release]
pre-release-commit-message = "chore(release): release {{version}}"

[dependencies]
rayon = "1.0.0"
memmap2 = "0.5.7"
arrayref = "0.3.5"
tempfile = "3.3"
positioned-io = "0.3"
log = "0.4.7"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0.23"
typenum = "1.11.2"

[dev-dependencies]
byteorder = "1.3.1"
env_logger = "0.7.1"
sha2 = "0.10.2"
tempfile = "3.3"
rand = "0.7.3"
criterion = "0.3"
walkdir = "2.3.2"

[[bench]]
name = "merkle"
path = "benches/merkle.rs"
harness = false
